--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "viem": "^1.21.0",
-    "wagmi": "^1.4.12"
+    "wagmi": "^1.4.12",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "^20",
