--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,20 @@
+// {
+//   "extends": "next"
+// }
+
 {
-  "extends": "next"
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["standard-with-typescript", "plugin:react/recommended"],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/semi": "off"
+  }
 }
