--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "cypress:open": "cypress open",
+    "synpress:run": "env-cmd -f .env.e2e synpress run --configFile synpress.config.js",
+    "test:e2e": "start-server-and-test 'yarn start' http://localhost:8080 'yarn synpress:run'"
   },
   "dependencies": {
     "next": "14.0.4",
@@ -22,6 +25,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
+    "cypress": "^13.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
