--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "cypress:open": "cypress open",
-    "synpress:run": "env-cmd -f .env.e2e synpress run --configFile synpress.config.js",
-    "test:e2e": "start-server-and-test 'yarn start' http://localhost:8080 'yarn synpress:run'"
+    "synpress:run": "env-cmd -f .env.e2e synpress run --configFile synpress.config.js --browser firefox",
+    "test:e2e": "start-server-and-test 'yarn start' http://localhost:3000 'yarn synpress:run'"
   },
   "dependencies": {
+    "cypress": "12.17.3",
+    "env-cmd": "^10.1.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
@@ -21,11 +23,11 @@
     "zustand-persist": "^0.4.0"
   },
   "devDependencies": {
+    "@synthetixio/synpress": "3.7.2-beta.9",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
-    "cypress": "^13.6.2",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
