--- a/.env.e2e
+++ b/.env.e2e
@@ -8,3 +8,12 @@ CHAIN_ID=80001
 RPC_URL='https://matic-mumbai.chainstacklabs.com'
 SYMBOL="MATIC"
 IS_TESTNET=true
+
+
+
+# SECRET_WORDS='battle raccoon helmet please deliver keep kiss round orphan frame update message'
+# NETWORK_NAME='Goerli test network'
+# CHAIN_ID=5
+# RPC_URL='https://goerli.infura.io/v3/'
+# SYMBOL="GoerliETH"
+# IS_TESTNET=true
