--- a/.env.e2e
+++ b/.env.e2e
@@ -1,19 +1,19 @@
 # .env.e2e 
 # The recovery phrase for the wallet that will be restored while preparing Metamask 
 # Will be the selected wallet by default when connecting to the dApp 
+
 SECRET_WORDS='battle raccoon helmet please deliver keep kiss round orphan frame update message'
-# Network info at which the tests will run. 
+
 # NETWORK_NAME='Mumbai'
 # CHAIN_ID=80001
 # RPC_URL='https://matic-mumbai.chainstacklabs.com'
 # SYMBOL="MATIC"
 # IS_TESTNET=true
 
-
-
-# SECRET_WORDS='battle raccoon helmet please deliver keep kiss round orphan frame update message'
 NETWORK_NAME='Goerli test network'
 CHAIN_ID=5
 RPC_URL='https://rpc.ankr.com/eth_goerli'
-SYMBOL="ETH"
+# RPC_URL='https://goerli.infura.io/v3/'
+SYMBOL="GoerliETH"
 IS_TESTNET=true
+SKIP_METAMASK_SETUP=true
